[tool.poetry]
name = "securelink"
version = "0.1.0"
description = ""
authors = ["muslih_k_diy <muslihk00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "^0.115.8", optional = true}
uvicorn = {version = "^0.34.0", optional = true}

[tool.poetry.extras]
api = ["fastapi","uvicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
